button + spacing on tablets fixes

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -47,7 +47,7 @@
 .animalparent {
 	display: grid;
     grid-template-columns: 25vw 50vw 25vw;
-    grid-template-rows: 75vh;
+    grid-template-rows: 15vh 75vh;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     grid-template-areas:
@@ -62,16 +62,16 @@
 
 .electionsparent {
 	display: grid;
-	grid-template-columns: 25vw 25vw 25vw 10vw;
+	grid-template-columns: 50vw 35vw;
 	grid-template-rows: fit-content(10%);
 	grid-column-gap: 0px;
 	grid-row-gap: 0px;
 	grid-template-areas:
-		"divisionb divisionb divisionb divisionb"
-		"Voters Voters Inbound Inbound"
-		"Voters Voters Inbound Inbound"
-		"Outreach Outreach Inbound Inbound"
-		"Outreach Outreach purpleb purpleb";
+		"divisionb divisionb"
+		"Voters Inbound"
+		"Voters Inbound"
+		"Outreach Inbound"
+		"Outreach purpleb purpleb";
 	margin: 0 5vw 2vw 5vw;
 	}
 
@@ -79,7 +79,7 @@
 	.electionsparent {
 		display: grid;
 		grid-template-columns: 25vw 50vw 25vw;
-		grid-template-rows: 75vh;
+		grid-template-rows: 15vh 75vh;
 		grid-column-gap: 0px;
 		grid-row-gap: 0px;
 		grid-template-areas:
@@ -111,7 +111,7 @@
 	.licensingparent {
 		display: grid;
 		grid-template-columns: 25vw 50vw 25vw;
-		grid-template-rows: 75vh;
+		grid-template-rows: 15vh 75vh;
 		grid-column-gap: 0px;
 		grid-row-gap: 0px;
 		grid-template-areas:
@@ -128,11 +128,12 @@
 .recordingparent {
 	display: grid;
 	grid-template-columns: 25vw 25vw 25vw 10vw;
-	grid-template-rows: 1fr 2fr 3fr;
+	grid-template-rows: 1fr 1fr 2fr 3fr;
 	grid-column-gap: 0px;
 	grid-row-gap: 0px;
 	grid-template-areas:
 		"divisionb divisionb divisionb divisionb"
+		". . Documents Documents"
 		"descriptionR descriptionR Documents Documents"
 		"Marriages Marriages Recorded Recorded";
 	margin: 0 5vw 2vw 5vw;
@@ -142,7 +143,7 @@
 	.recordingparent {
 		display: grid;
 		grid-template-columns: 25vw 50vw 25vw;
-		grid-template-rows: 75vh;
+		grid-template-rows: 15vh 75vh;
 		grid-column-gap: 0px;
 		grid-row-gap: 0px;
 		grid-template-areas:
@@ -157,15 +158,15 @@
 
 .beyondparent {
 	display: grid;
-	grid-template-columns: 25vw 25vw 25vw 20vw;
+	grid-template-columns: 40vw 40vw;
 	grid-template-rows: fit-content(50%);
 	grid-column-gap: 0px;
 	grid-row-gap: 0px;
 	grid-template-areas:
-		"divisionb divisionb divisionb divisionb"
-		"descriptionB descriptionB descriptionB ."
-		"Security Security Community Community"
-		"Backpost Backpost Auditing Auditing";
+		"divisionb divisionb"
+		"descriptionB descriptionB"
+		"Security Community"
+		"Backpost Auditing";
 	margin: 0 5vw 2vw 5vw;
 }
 
@@ -176,6 +177,12 @@
     margin: 0;
     width: 100%;
 	font-size: 1.75em;
+}
+
+.beyond {
+	background-color:#55A595;
+	text-align: center;
+	font-size: 
 }
 
 @media (max-width: 1200px){
